--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,11 @@
 *.war
 *.nar
 *.ear
-*.zip
+# *.zip
 *.tar.gz
-*.rar
+# *.rar
 study.txt
+*.mmap
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
